# SpartyGnomeGame

./: .gitignore  CMakeLists.txt  Doxyfile.doxy  GameApp.cpp  GameApp.h  README.md  main.cpp  pch.h
GameLib/: CMakeLists.txt  Game.cpp  Game.h  GameView.cpp  GameView.h  HorizontalVisit.cpp  HorizontalVisit.h  Item.cpp  Item.h  ItemBackground.cpp  ItemBackground.h  ItemDec.cpp  ItemDec.h  ItemDoor.cpp  ItemDoor.h  ItemInvincibility.cpp  ItemInvincibility.h  ItemMoney.cpp  ItemMoney.h  ItemPlatform.cpp  ItemPlatform.h  ItemTuitionUp.cpp  ItemTuitionUp.h  ItemVillain.cpp  ItemVillain.h  ItemVisitor.cpp  ItemVisitor.h  ItemWall.cpp  ItemWall.h  Level.cpp  Level.h  MainFrame.cpp  MainFrame.h  MoneyDec.cpp  MoneyDec.h  PlatformDec.cpp  PlatformDec.h  Scoreboard.cpp  Scoreboard.h  SpartyGnome.cpp  (+6 more)
Tests/: CMakeLists.txt  EmptyTest.cpp  GameTest.cpp  ItemTest.cpp  LevelTest.cpp  SpartyGnomeTest.cpp  gtest_main.cpp
levels/: level2.xml  level3.xml
